added buttons and modal form; improved html for adding bookmark

--- a/app/assets/stylesheets/base/_variables.scss
+++ b/app/assets/stylesheets/base/_variables.scss
@@ -1,6 +1,6 @@
 // Typography
-$sans-serif: $helvetica;
-$serif: $georgia;
+$sans-serif: "Varela Round", sans-serif;
+$serif: "Nunito", serif;
 $base-font-family: $sans-serif;
 $header-font-family: $base-font-family;
 
@@ -30,13 +30,15 @@ $light-gray: #DDD;
 $light-red: #FBE3E4;
 $light-yellow: #FFF6BF;
 $light-green: #E6EFC2;
+$plum: #6E4F6A;
+$light-plum: #BBABB9;
 
 // Background Color
 $base-background-color: white;
 
 // Font Colors
 $base-font-color: $dark-gray;
-$base-accent-color: $blue;
+$base-accent-color: $plum;
 
 // Link Colors
 $base-link-color: $base-accent-color;
