--- a/app/assets/stylesheets/base/extends/_button.scss
+++ b/app/assets/stylesheets/base/extends/_button.scss
@@ -2,7 +2,7 @@
   -webkit-font-smoothing: antialiased;
   background-color: $base-button-color;
   border-radius: $base-border-radius;
-  color: white;
+  color: #EEE;
   display: inline-block;
   font-size: $base-font-size;
   font-weight: bold;
