--- a/app/assets/stylesheets/bourbon/addons/_button.scss
+++ b/app/assets/stylesheets/bourbon/addons/_button.scss
@@ -1,4 +1,4 @@
-@mixin button ($style: simple, $base-color: #4294f0, $text-size: inherit, $padding: 7px 18px) {
+@mixin button ($style: simple, $base-color: $base-button-color, $text-size: inherit, $padding: 7px 18px) {
 
   @if type-of($style) == string and type-of($base-color) == color {
     @include buttonstyle($style, $base-color, $text-size, $padding);
@@ -7,7 +7,7 @@
   @if type-of($style) == string and type-of($base-color) == number {
     $padding: $text-size;
     $text-size: $base-color;
-    $base-color: #4294f0;
+    $base-color: $base-button-color;
 
     @if $padding == inherit {
       $padding: 7px 18px;
@@ -38,7 +38,7 @@
   @if type-of($style) == number {
     $padding: $base-color;
     $text-size: $style;
-    $base-color: #4294f0;
+    $base-color: $base-button-color;
     $style: simple;
 
     @if $padding == #4294f0 {
