--- a/app/views/bookmarks/index.html.erb
+++ b/app/views/bookmarks/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Listing bookmarks</h1>
+<h1>My Bookmarks</h1>
 
 <table>
   <thead>
@@ -13,7 +13,7 @@
     <% @bookmarks.each do |bookmark| %>
       <tr>
         <td><%= bookmark.title %></td>
-        <td><%= bookmark.url %></td>
+        <td><%= link_to bookmark.url, "#{bookmark.url}" %></td>
         <td><%= link_to 'Show', bookmark %></td>
         <td><%= link_to 'Edit', edit_bookmark_path(bookmark) %></td>
         <td><%= link_to 'Destroy', bookmark, method: :delete, data: { confirm: 'Are you sure?' } %></td>
@@ -24,4 +24,4 @@
 
 <br>
 
-<%= link_to 'New Bookmark', new_bookmark_path %>
+<button><%= link_to 'Create a new bookmark', new_bookmark_path %></button>
