--- a/app/views/bookmarks/show.html.erb
+++ b/app/views/bookmarks/show.html.erb
@@ -7,8 +7,8 @@
 
 <p>
   <strong>Url:</strong>
-  <%= @bookmark.url %>
+  <%=  @bookmark.url %>
 </p>
 
 <%= link_to 'Edit', edit_bookmark_path(@bookmark) %> |
-<%= link_to 'Back', bookmarks_path %>
+<%= link_to 'Go to My Bookmarks', bookmarks_path %>
