--- a/app/views/site/index.html.erb
+++ b/app/views/site/index.html.erb
@@ -1,2 +1,21 @@
-<h1>Site#index</h1>
-<p>Find me in app/views/site/index.html.erb</p>
+<h1>Welcome to the BookMarks App</h1>
+	<p>Find me in app/views/site/index.html.erb</p>
+
+
+
+<h2>Your Bookmarks</h2>
+	
+
+	<ul>
+	<% current_user.bookmarks.each do | bookmark | %>
+		<li><%= link_to bookmark.title, bookmark.url %></li>
+	<% end %>
+	</ul>
+
+	<button><%= link_to 'Create a New Bookmark', new_bookmark_path %></button>
+
+<h3>Log In</h3> 
+	<button><%= link_to 'Sign In', new_user_session_path %></button>
+	<button><%= link_to 'Sign Up', new_user_registration_path %></button>
+
+
